# soundcloudy

./: .env  .env.local.example  .env.production  .env.render-backend.example  .env.render-socket.example  .gitignore  Cargo.toml  LOCAL_TUNNEL_SETUP.md  capacitor.config.ts  create-icon.js  et --hard 90cc8dd^  index.html  netlify.toml  next.config.js  next.config.mjs  package-lock.json  package.json  server.js  start-soundcloudy.bat  structure.txt  tauri.conf.json  test-oauth.js  tsconfig.json  tsconfig.tsbuildinfo
.cargo/: config.toml
apps/backend/: package.json
apps/desktop/: README.md
apps/mobile/: .env.example  App.tsx  README.md  package-lock.json
apps/socket-server/: package.json
data/: friends.json
electron/: main.cjs  preload.cjs
mobile/: App.tsx  package.json
mobileeee/: package.json
pages/: _app.tsx  _document.tsx  girlfriend.tsx  homepage.tsx  index.tsx  login.tsx  mobile.tsx  oauth-callback.tsx  particles-test.tsx  remote.tsx
pages/api/: add-to-playlist.ts  callback.js  check-follow.ts  check-like-playlist.ts  check-like.ts  check-playlist.ts  check-track-in-playlists.ts  check-tracks-in-playlists.ts  discover.ts  follow.ts  genius-metadata.ts  like-playlist.ts  like.ts  likes-playlists.ts  likes.ts  listening-history.ts  owned-playlist-track-memberships.ts  playlists.ts  recent-tracks.ts  recently-played.ts  (+12 more)
public/: manifest.json  service-worker.js
scripts/: extract-sc-v2-id.ts  update-sc-credentials.js
server/: index.cjs  socket-io.cjs  socket-server.js
src/: config.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+89 files in other folders)
