[package]
name = "soundcloudy"
version = "1.0.0"
description = "A SoundCloud music player"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-execute", "shell-open", "window-create"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
