[package]
name = "soundcloudy"
version = "1.0.0"
description = "A SoundCloud music player"
authors = ["You <you@example.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "soundcloudy"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true

[profile.release.build-override]
opt-level = 0
